# configs

./: .bash_profile  .editorconfig  .emacs  .gitignore  .vimrc  Preferences.sublime-settings  README  README.md  aliases  atom.sh  bootstrap.sh  brew.sh  flake.nix  i3-config  i3status-config  install.sh  pyproject.toml
.config/compton/: config
.config/fish/: config.fish
.config/fish/functions/: aliases.fish  export.fish
.config/i3/: config  i3status.conf  picom.conf
.config/termite/: config
cava/: __main__.py  cli.py
cava/tools/: homebrew.py
common/: darwin.nix  default.nix  environment.nix  nix.nix  users.nix
common/darwin/: nix.nix
home/: default.nix
machines/dev.wrk/: default.nix
machines/tequila/: default.nix
machines/thinkie/: default.nix
metadata/: ssh.nix
pkgs/: homebrew.nix  java.nix  node.nix  system.nix
rc/: .gitignore
rc/i3/: config  i3status.conf
rc/ssh/config.d/: 10-user
rc/zsh/: zprofile  zshrc
scripts/: atom  bootstrap  brew  dep_mac  homebrew  setup_directories
scripts/linux/: dependencies
scripts/macos/: brew  dependencies
